--- a/FamilyTree.Modules.Person/Views/ListPersonView.xaml
+++ b/FamilyTree.Modules.Person/Views/ListPersonView.xaml
@@ -43,8 +43,13 @@
                                Grid.Column="0"
                                Grid.RowSpan="2"
                                HorizontalAlignment="Center"
-                               VerticalAlignment="Center"
-                               Source="{Binding ImagePath, Converter={StaticResource imageConverter}}" />
+                               VerticalAlignment="Center">
+                            <Image.Source>
+                                <BitmapImage CacheOption="OnLoad"
+                                             DecodePixelWidth="90"
+                                             UriSource="{Binding ImagePath, Converter={StaticResource imageConverter}}" />
+                            </Image.Source>
+                        </Image>
                         <TextBlock Style="{StaticResource description}"
                                    Grid.Row="0"
                                    Grid.Column="1">
