--- a/FamilyTree.Modules.Person/Views/CreatePartnerView.xaml
+++ b/FamilyTree.Modules.Person/Views/CreatePartnerView.xaml
@@ -11,198 +11,193 @@
     <UserControl.Resources>
         <converters:GenderToBoolConverter x:Key="btg" />
         <converters:PathConverter x:Key="path" />
+        <converters:GenderToIcon x:Key="icon" />
+        <converters:BoolToVisibility x:Key="boolToVisibility" />
     </UserControl.Resources>
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="20*" />
-            <ColumnDefinition Width="10*" />
-            <ColumnDefinition Width="20*" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="5*" />
-            <RowDefinition Height="5*" />
-            <RowDefinition Height="1.5*" />
-        </Grid.RowDefinitions>
-
-        <TextBlock Grid.Row="0"
-                   Grid.ColumnSpan="5"
-                   Text="Személy létrehozása"
-                   Style="{StaticResource sub_title}" />
-        <Grid Grid.Row="1">
+    <ScrollViewer>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="20*" />
+                <ColumnDefinition Width="10*" />
+                <ColumnDefinition Width="20*" />
+            </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="8*" />
-                <RowDefinition Height="2*" />
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="5*" />
+                <RowDefinition Height="5*" />
+                <RowDefinition Height="1.5*" />
             </Grid.RowDefinitions>
 
-            <Image Source="{Binding NewPerson.ImagePath, Converter={StaticResource path}}"
-                   Height="150"
-                   Width="150"
-                   Grid.Row="0" />
+            <TextBlock Grid.Row="0"
+                       Grid.ColumnSpan="5"
+                       Text="Személy létrehozása"
+                       Style="{StaticResource sub_title}" />
+            <Grid Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="8*" />
+                    <RowDefinition Height="2*" />
+                </Grid.RowDefinitions>
 
-            <Button Grid.Row="1"
-                    Margin="15,5"
-                    Command="{Binding SelectPictureCommand}">
+                <Image Source="{Binding NewPerson.ImagePath, Converter={StaticResource path}}"
+                       Height="150"
+                       Width="150"
+                       Grid.Row="0" />
+
+                <Button Grid.Row="1"
+                        Margin="15,5"
+                        Command="{Binding SelectPictureCommand}">
+                    <StackPanel Margin="5"
+                                Orientation="Horizontal">
+                        <fa:FontAwesome Icon="Upload"
+                                        VerticalAlignment="Center" />
+                        <TextBlock Text=" Kép hozzáadása"
+                                   VerticalAlignment="Center" />
+                    </StackPanel>
+                </Button>
+            </Grid>
+            <Grid Grid.Row="1"
+                  Grid.Column="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="8*" />
+                    <RowDefinition Height="2*" />
+                </Grid.RowDefinitions>
+                <Image Source="{Binding SelectedPerson.ImagePath, Converter={StaticResource path}}"
+                       Height="150"
+                       Width="150"
+                       Grid.Row="0"
+                       Grid.Column="0" />
+            </Grid>
+
+            <Grid Margin="10"
+                  Grid.Row="2"
+                  HorizontalAlignment="Center">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+
+                <TextBox Grid.Row="0"
+                         Margin="5"
+                         Text="{Binding NewPerson.LastName}" />
+                <TextBox Grid.Row="1"
+                         Margin="5"
+                         Text="{Binding NewPerson.FirstName}" />
+                <DatePicker Grid.Row="2"
+                            Foreground="Black"
+                            Margin="5"
+                            HorizontalAlignment="Stretch"
+                            SelectedDate="{Binding NewPerson.DateOfBirth}" />
+
+                <StackPanel Orientation="Vertical"
+                            Grid.Row="3"
+                            Grid.Column="1">
+                    <CheckBox Content="Elhunyt"
+                              x:Name="status"
+                              Foreground="White"
+                              IsChecked="{Binding IsDead}" />
+                    <DatePicker Visibility="{Binding ElementName=status, Path=IsChecked, Converter={StaticResource boolToVisibility}}"
+                                SelectedDate="{Binding DateOfDeath}"
+                                HorizontalAlignment="Stretch" />
+                </StackPanel>
+                <fa:FontAwesome Grid.Row="4"
+                                Grid.Column="1"
+                                Icon="{Binding NewPerson.Gender, Converter={StaticResource icon}}"
+                                Style="{StaticResource sub_title}" />
+            </Grid>
+
+            <Grid Margin="10"
+                  Grid.Row="2"
+                  Grid.Column="2"
+                  HorizontalAlignment="Center">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+
+                <TextBlock Grid.Row="0"
+                           Style="{StaticResource description}"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           Text="{Binding SelectedPerson.LastName}" />
+                <TextBlock Grid.Row="1"
+                           Style="{StaticResource description}"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           Text="{Binding SelectedPerson.FirstName}" />
+                <TextBlock Grid.Row="2"
+                           Style="{StaticResource description}"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           Text="{Binding SelectedPerson.DateOfBirth, StringFormat='{}{0:yyyy.MM.dd}'}" />
+
+                <StackPanel Orientation="Horizontal"
+                            Grid.Row="3"
+                            Visibility="{Binding IsDead, Converter={StaticResource boolToVisibility}}">
+                    <TextBlock Style="{StaticResource description}"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Text="{Binding SelectedPerson.DateOfDeath, StringFormat='{}{0:yyyy.MM.dd}'}" />
+                </StackPanel>
+                <fa:FontAwesome Grid.Row="4"
+                                Grid.Column="1"
+                                Icon="{Binding SelectedPerson.Gender, Converter={StaticResource icon}}"
+                                Style="{StaticResource sub_title}" />
+            </Grid>
+            <Button Grid.Row="3"
+                    Grid.ColumnSpan="5"
+                    Margin="200,10"
+                    Command="{Binding AsyncCommand}">
                 <StackPanel Margin="5"
                             Orientation="Horizontal">
-                    <fa:FontAwesome Icon="Upload"
+                    <fa:FontAwesome Icon="Save"
                                     VerticalAlignment="Center" />
-                    <TextBlock Text=" Kép hozzáadása"
+                    <TextBlock Text=" Mentés"
                                VerticalAlignment="Center" />
                 </StackPanel>
             </Button>
-        </Grid>
-        <Grid Grid.Row="1"
-              Grid.Column="2">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="8*" />
-                <RowDefinition Height="2*" />
-            </Grid.RowDefinitions>
-            <Image Source="{Binding SelectedPerson.ImagePath, Converter={StaticResource path}}"
-                   Height="150"
-                   Width="150"
-                   Grid.Row="0"
-                   Grid.Column="0" />
-        </Grid>
 
-        <Grid Margin="10"
-              Grid.Row="2">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-
-            <TextBox Grid.Row="0"
-                     Margin="5"
-                     Text="{Binding NewPerson.LastName}" />
-            <TextBox Grid.Row="1"
-                     Margin="5"
-                     Text="{Binding NewPerson.FirstName}" />
-            <DatePicker Grid.Row="2"
-                        Foreground="Black"
-                        Margin="5"
-                        HorizontalAlignment="Stretch"
-                        SelectedDate="{Binding NewPerson.DateOfBirth}" />
-            <DatePicker Grid.Row="3"
-                        Foreground="Black"
-                        Margin="5"
-                        HorizontalAlignment="Stretch"
-                        SelectedDate="{Binding NewPerson.DateOfDeath}" />
-
-            <StackPanel Grid.Row="4"
-                        Orientation="Horizontal"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center">
-                <RadioButton GroupName="NewPersonGender"
-                             IsChecked="{Binding NewPerson.Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Male}}"
-                             Content="Férfi"
-                             Foreground="White"/>
-                <RadioButton GroupName="NewPersonGender"
-                             IsChecked="{Binding NewPerson.Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Female}}"
-                             Content="Nő"
-                             Foreground="White"/>
-            </StackPanel>
-        </Grid>
-
-        <Grid Margin="10"
-              Grid.Row="2"
-              Grid.Column="2">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-
-            <TextBlock Grid.Row="0"
-                       Style="{StaticResource description}"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center"
-                       Text="{Binding SelectedPerson.LastName}" />
-            <TextBlock Grid.Row="1"
-                       Style="{StaticResource description}"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center"
-                       Text="{Binding SelectedPerson.FirstName}" />
-            <TextBlock Grid.Row="2"
-                       Style="{StaticResource description}"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center"
-                       Text="{Binding SelectedPerson.DateOfBirth, StringFormat='{}{0:yyyy.MM.dd}'}" />
-            <TextBlock Grid.Row="3"
-                       Style="{StaticResource description}"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center"
-                       Text="{Binding SelectedPerson.DateOfDeath, StringFormat='{}{0:yyyy.MM.dd}'}" />
-
-            <StackPanel Grid.Row="4"
-                        Orientation="Horizontal"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center">
-                <RadioButton GroupName="FatherGender"
-                             IsEnabled="False"
-                             IsChecked="{Binding SelectedPerson.Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Male}}"
-                             Content="Férfi"
-                             Foreground="White"/>
-                <RadioButton GroupName="FatherGender"
-                             IsEnabled="False"
-                             IsChecked="{Binding SelectedPerson.Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Female}}"
-                             Content="Nő"
-                             Foreground="White"/>
-            </StackPanel>
-        </Grid>
-        <Button Grid.Row="3"
-                Grid.ColumnSpan="5"
-                Margin="200,10"
-                Command="{Binding AsyncCommand}">
-            <StackPanel Margin="5"
-                        Orientation="Horizontal">
-                <fa:FontAwesome Icon="Save"
-                                VerticalAlignment="Center" />
-                <TextBlock Text=" Mentés"
+            <Grid Margin="10"
+                  Grid.Column="1"
+                  Grid.Row="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0"
+                           Text="Vezetéknév"
+                           Style="{StaticResource description}"
+                           HorizontalAlignment="Center"
                            VerticalAlignment="Center" />
-            </StackPanel>
-        </Button>
-
-        <Grid Margin="10"
-              Grid.Column="1"
-              Grid.Row="2">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0"
-                   Text="Vezetéknév"
-                   Style="{StaticResource description}"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center" />
-            <TextBlock Grid.Row="1"
-                   Text="Utónév"
-                   Style="{StaticResource description}"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center" />
-            <TextBlock Grid.Row="2"
-                   Text="Született"
-                   Style="{StaticResource description}"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center" />
-            <TextBlock Grid.Row="3"
-                   Text="Elhunyt"
-                   Style="{StaticResource description}"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center" />
-            <TextBlock Grid.Row="4"
-                   Text="Nem"
-                   Style="{StaticResource description}"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center" />
+                <TextBlock Grid.Row="1"
+                           Text="Utónév"
+                           Style="{StaticResource description}"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center" />
+                <TextBlock Grid.Row="2"
+                           Text="Született"
+                           Style="{StaticResource description}"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center" />
+                <TextBlock Grid.Row="3"
+                           Text="Elhunyt"
+                           Style="{StaticResource description}"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center" />
+                <TextBlock Grid.Row="4"
+                           Text="Nem"
+                           Style="{StaticResource description}"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center" />
+            </Grid>
         </Grid>
-    </Grid>
+    </ScrollViewer>
 </UserControl>
