--- a/FamilyTree.Modules.Person/Views/InfoPersonView.xaml
+++ b/FamilyTree.Modules.Person/Views/InfoPersonView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="FamilyTree.Modules.Person.Views.InfoPersonView"
+﻿<UserControl xmlns:Views="clr-namespace:FamilyTree.Modules.Person.Views"  x:Class="FamilyTree.Modules.Person.Views.InfoPersonView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"
@@ -11,6 +11,8 @@
     <UserControl.Resources>
         <converters:GenderToBoolConverter x:Key="btg" />
         <converters:PathConverter x:Key="path" />
+        <converters:BoolToVisibility x:Key="boolToVisibility" />
+        <converters:GenderToIcon x:Key="icon" />
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -48,56 +50,49 @@
                    Grid.RowSpan="7"
                    Margin="20" />
 
-            <StackPanel Orientation="Vertical"
+            <StackPanel Orientation="Horizontal"
                         Grid.Row="1"
                         Grid.Column="1">
+                <TextBlock Text="Vezetéknév: "
+                           Style="{StaticResource description}" />
                 <TextBlock Style="{StaticResource description}"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"
                            Text="{Binding FirstName}" />
             </StackPanel>
-            <StackPanel Orientation="Vertical"
+            <StackPanel Orientation="Horizontal"
                         Grid.Row="2"
                         Grid.Column="1">
+                <TextBlock Text="Keresztnév: "
+                           Style="{StaticResource description}" />
                 <TextBlock Style="{StaticResource description}"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"
                            Text="{Binding LastName}" />
             </StackPanel>
-            <StackPanel Orientation="Vertical"
+            <StackPanel Orientation="Horizontal"
                         Grid.Row="3"
                         Grid.Column="1">
+                <TextBlock Text="Született: " Style="{StaticResource description}" />
                 <TextBlock Style="{StaticResource description}"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"
                            Text="{Binding DateOfBirth, StringFormat='{}{0:yyyy.MM.dd}'}" />
             </StackPanel>
-            <StackPanel Orientation="Vertical"
+            <StackPanel Orientation="Horizontal"
                         Grid.Row="4"
-                        Grid.Column="1">
+                        Grid.Column="1"
+                        Visibility="{Binding IsDead, Converter={StaticResource boolToVisibility}}">
+                <TextBlock Text="Elhunyt: " Style="{StaticResource description}" />
                 <TextBlock Style="{StaticResource description}"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"
                            Text="{Binding DateOfDeath, StringFormat='{}{0:yyyy.MM.dd}'}" />
             </StackPanel>
-            <StackPanel Grid.Row="5"
-                        Grid.Column="1"
-                        Orientation="Horizontal"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center">
-                <RadioButton GroupName="NewPersonGender"
-                             Grid.Column="1"
-                             IsEnabled="False"
-                             IsChecked="{Binding Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Male}}"
-                             Content="Férfi"
-                             Foreground="White"/>
-                <RadioButton GroupName="NewPersonGender"
-                             Grid.Column="1"
-                             IsEnabled="False"
-                             IsChecked="{Binding Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Female}}"
-                             Content="Nő"
-                             Foreground="White"/>
-            </StackPanel>
+            <fa:FontAwesome Grid.Row="5"
+                            Grid.Column="1"
+                            Icon="{Binding Gender, Converter={StaticResource icon}}"
+                            Style="{StaticResource sub_title}" />
         </Grid>
     </Grid>
 </UserControl>
