--- a/FamilyTree.Modules.Person/Views/ParentTreePersonView.xaml
+++ b/FamilyTree.Modules.Person/Views/ParentTreePersonView.xaml
@@ -14,9 +14,11 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="9*" />
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Text="Szülők"
+        <TextBlock Grid.Row="0"
+                   Text="Szülők"
                    Style="{StaticResource title}" />
-        <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto"
+        <ScrollViewer Grid.Row="1"
+                      HorizontalScrollBarVisibility="Auto"
                       VerticalScrollBarVisibility="Auto">
             <ItemsControl ItemsSource="{Binding TreeElements}">
                 <ItemsControl.ItemsPanel>
